# mnml-tracker-jira

./: CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  dist-workspace.toml
.github/: build-setup.yml
.github/workflows/: bump-homebrew-tap.yml  release.yml
scripts/: dist-check.sh
src/: app.rs  auth.rs  blit.rs  config.rs  jira.rs  keys.rs  main.rs  theme.rs  ui.rs
wix/: main.wxs
